@@ -1,6 +1,12 @@
 LTL3 Tools NEWS
 -=-=-=-=-=-=-=-
 
+[under development:]                    LTL3 tools 0.0.4
+
+- Fixed a bug in nevertofsm which could lead to AT&T's fsmlibrary's reject
+  of the generated automaton; that is, states can no longer have a trailing
+  zero.
+
 Thu Jul 17 13:28:18 EST 2008:           LTL3 tools 0.0.3
 
 - Fixed a non-termination bug which would cause stack overflow on certain
